# whisper-live-client-for-mac

./: .gitignore  README.md  install_fonts.sh  kill_server.sh  pyproject.toml  realtime.py  server.py  test_mic.py  transcribe.py  transcribe_only.py  vad.py
convert/: README.md  convert.py  convert.sh  pyproject.toml
mlx/: README.md  pyproject.toml
mlx/subtitle/: README.md  floating_subtitle.py  floating_subtitle_native.py  pyproject.toml
models/: .gitkeep
models/whisper-large-v2-taiwanese-hakka-v1-mlx/: config.json
subtitle/: README.md  subtitle.py
