[project]
name = "whisper-live-client-for-mac"
version = "0.3.0"
description = "Real-time speech transcription for Apple Silicon Mac using MLX"
requires-python = ">=3.10"
dependencies = [
    "mlx-whisper",
    "pyaudio",
    "numpy",
    "pyobjc-framework-Cocoa",
    "pysilero-vad",
    "opencc-python-reimplemented",
]
